<resources>
    <string name="app_name">KAHAGO Login Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="register">Daftar</string>
    <string name="please_input_your_data">Silahkan masukan data anda</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="dont_have_account">Belum punya akun Kahago?</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="please_complete_your_data">Silahkan lengkapi data berikut ini</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="any_reference">Ada Reference?</string>
    <string name="accept_terms_condition_kahago">Setuju dengan Term &amp; Condition Kahago</string>
</resources>